[gd_scene load_steps=5 format=3 uid="uid://dspe8g1580nei"]

[ext_resource type="Script" uid="uid://dnvivcdmioo3i" path="res://Global/spawn_menu.gd" id="1_foktu"]
[ext_resource type="Texture2D" uid="uid://caexxtaupajll" path="res://assets/knight_standing.png" id="1_qxyj7"]
[ext_resource type="Texture2D" uid="uid://cfeefvq68iyh" path="res://assets/archer.png" id="3_la447"]
[ext_resource type="Texture2D" uid="uid://b0t2i5msch5nc" path="res://assets/villager.png" id="4_0boue"]

[node name="SpawnMenu" type="Node2D"]
top_level = true
visibility_layer = 16
script = ExtResource("1_foktu")

[node name="Panel" type="Panel" parent="."]
offset_right = 270.0
offset_bottom = 81.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 90.0
offset_top = -24.0
offset_right = 187.0
offset_bottom = -1.0
text = "Spawn Units"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
z_index = 10
offset_left = 189.0
offset_top = 17.0
offset_right = 244.0
offset_bottom = 61.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(56, 38)
scale = Vector2(0.06, 0.05)
texture = ExtResource("1_qxyj7")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(138.64, 40)
scale = Vector2(0.06125, 0.0429688)
texture = ExtResource("3_la447")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(218, 40)
scale = Vector2(0.0534375, 0.0347656)
texture = ExtResource("4_0boue")

[node name="Button3" type="Button" parent="."]
z_index = 10
offset_left = 110.0
offset_top = 19.0
offset_right = 165.0
offset_bottom = 61.0
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
z_index = 10
offset_left = 27.0
offset_top = 19.0
offset_right = 82.0
offset_bottom = 60.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
